# tg_msg_sender

./: README.md  pyproject.toml
tg_msg_sender/: sender.py  utilities.py
